Fix name column word break on mobile.

--- a/src/styles/_repo.scss
+++ b/src/styles/_repo.scss
@@ -7,6 +7,7 @@
 
   &__name {
     font-size: rem(20);
+    word-break: break-word;
   }
 
   &__info {
